# job_finder

./: .gitignore  README.md  pyproject.toml
src/job_finder/: common.py  config.py  database.py  notification_handler.py  service.py
src/job_finder/company/: capgemini.py
